# pico-rv32ima

./: .gitignore  .gitmodules  CMakeLists.txt  Image  LICENSE  README.md
hardware/: pico_linux.kicad_sch
linux/: Image  Makefile
linux/c4/: Makefile
linux/configs/: buildroot_config  busybox_config  custom_kernel_config
linux/configs/rootfsoverlay/etc/: inittab
linux/coremark/: Makefile
linux/duktape/: Makefile
linux/hello_linux/: Makefile  hello_linux  hello_linux.S  hello_linux.gdb
linux/linux_configs/: buildroot_config  busybox_config  custom_kernel_config
linux/linux_configs/rootfsoverlay/etc/: fstab  inittab
pico-rv32ima/: CMakeLists.txt  cache.c  cache.h  cdc_console.c  cdc_console.h  console.c  console.h  default16mbdtc.h  default64mbdtc.h  default8mbdtc.h  emulator.c  emulator.h  hw_config.c  hw_config.h  main.c  mini-rv32ima.h  mmcbbp.c  psram.c  psram.h  rv32_config.h  sd_hw_config.c  sdram.c  sdram.h  terminal.c  terminal.h  tusb_callbacks.c  usb_descriptors.c  vm_config.h
pico-rv32ima/console/: console.c  console.h
pico-rv32ima/console/ps2/: ps2.c  ps2.h
pico-rv32ima/console/terminal/: terminal.c  terminal.h
pico-rv32ima/console/vga/: font.h  vga.c  vga.h
pico-rv32ima/console/vga/pio/: rgb.pio.h  vsync.pio.h
pico-rv32ima/hal/: hal_console.h  hal_csr.h  hal_psram.h  hal_sd.h  hal_timing.h
pico-rv32ima/petitfatfs/: CMakeLists.txt  diskio.h  mmcbbp.c  pff.c  pffconf.h
pico-rv32ima/ps2/: CMakeLists.txt  ps2.c  ps2.h
pico-rv32ima/tusb_inc/: tusb_config.h
pico-rv32ima/usb/: tusb_config.h  usb_descriptors.c
pico-rv32ima/vga/: CMakeLists.txt  vga.c  vga.h
pico-rv32ima/vga/pio/: hsync.pio.h  rgb.pio.h  vsync.pio.h
